JSA-Commite de seguridad

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -26,12 +26,19 @@
     <add key="GetListaPaises" value="api/catalogos/paises" />
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
     <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
+    
+    <add key="GetListaEstacionCarburacion" value="api/catalogos/consulta/estacioncarburacion" />
+    <add key="GetListaUnidadAlmcenGas" value="api/catalogos/consulta/unidadalmacengas/" />
+    <add key="GetListaEquiposTransporte" value="api/catalogos/consulta/equipotransporte" />
+
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
     <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo" />
     <add key="PutEliminaCentroCosto" value="api/catalogos/elimina/centro/costo" />
     <add key="GetCentroCosto" value="api/catalogos/centro/costo/" />
+    <add key="GetTipoCentroCostos" value="api/catalogos/consulta/tipocentrosdecosto" />
+    
     <add key="GetListaProductos" value="api/catalogos/consulta/producto" />
 
     <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable" />
