--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -226,6 +226,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CentroCostoController.cs" />
+    <Compile Include="Controllers\CuentaContableController.cs" />
     <Compile Include="Controllers\EmpresasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -237,17 +239,30 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Catalogos\CatalogoRespuestaDTO.cs" />
-    <Compile Include="Models\Catalogos\CuentaContableDTO.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\CentroCostoCrearDTO.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\CentroCostoEliminarDTO.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\CentroCostoModel.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\CentroCostoModificarDTO.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\TipoCentroCostoDTO.cs" />
+    <Compile Include="Models\Catalogos\CuentaContable\CuentaContableCrearDTO.cs" />
+    <Compile Include="Models\Catalogos\CuentaContable\CuentaContableDTO.cs" />
+    <Compile Include="Models\Catalogos\CuentaContable\CuentaContableEliminarDTO.cs" />
+    <Compile Include="Models\Catalogos\CuentaContable\CuentaContableModel.cs" />
+    <Compile Include="Models\Catalogos\CuentaContable\CuentaContableModificarDTO.cs" />
     <Compile Include="Models\Catalogos\Empresa.cs" />
     <Compile Include="Models\Catalogos\EmpresaModel.cs" />
-    <Compile Include="Models\Catalogos\CentroCostoDTO.cs" />
+    <Compile Include="Models\Catalogos\CentroCosto\CentroCostoDTO.cs" />
     <Compile Include="Models\Catalogos\EmpresasDTO.cs" />
+    <Compile Include="Models\Catalogos\EquipoTransporteDTO.cs" />
+    <Compile Include="Models\Catalogos\EstacionCarburacionDTO.cs" />
     <Compile Include="Models\Catalogos\PaisModel.cs" />
     <Compile Include="Models\Catalogos\ProductoDTO.cs" />
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
+    <Compile Include="Models\Catalogos\UnidadAlmacenGasDTO.cs" />
     <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraAutorizacionModel.cs" />
     <Compile Include="Models\OrdenCompra\OrdenCompraCrearDTO.cs" />
     <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
     <Compile Include="Models\OrdenCompra\OrdenCompraEstatusDTO.cs" />
@@ -4010,8 +4025,6 @@
     <Content Include="Views\Requisicion\Requisicion.cshtml" />
     <Content Include="Views\OrdenCompra\Ordenes.cshtml" />
     <Content Include="Views\OrdenCompra\OrdenCompra.cshtml" />
-    <Content Include="Views\Catalogos\CentroCosto.cshtml" />
-    <Content Include="Views\Catalogos\CuentaContable.cshtml" />
     <Content Include="Views\Catalogos\Proveedor.cshtml" />
     <Content Include="Views\Catalogos\Empresa.cshtml" />
     <Content Include="Views\Catalogos\NuevaEmpresa.cshtml" />
@@ -4025,6 +4038,9 @@
     <Content Include="Views\Shared\EditorTemplates\RequisicionProductoRevisionDTO.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RequisicionProductoAutorizacionDTO.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\ProductoOCDTO.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\OrdenCompraProductoCrearDTO.cshtml" />
+    <Content Include="Views\CentroCosto\CentroCosto.cshtml" />
+    <Content Include="Views\CuentaContable\CuentaContable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
