JOTM - 17/09/2018 Inicio vista de recarga de estación
* Inicia vista para recarga de estación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -125,9 +125,11 @@
         <activity
             android:name=".Activity.VerReporteActivity"
             android:label="@string/Reporte" />
-        <activity android:name=".Activity.RecargaCamionetaActivity"
-            android:label="@string/Recarga_camioneta"
-            />
+        <activity
+            android:name=".Activity.RecargaCamionetaActivity"
+            android:label="@string/Recarga_camioneta" />
+        <activity android:name=".Activity.RecargaEstacionCarburacionActivity"
+            android:label="@string/Recarga_de_estacion"/>
     </application>
 
 </manifest>
