CJAL_17_09_2018 Cat Usuarios, Roles

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -17,6 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
     <!--Login-->
@@ -25,9 +26,21 @@
     <add key="PostRegistraEmpresas" value="api/catalogos/registra/empresa" />
     <add key="GetListaPaises" value="api/catalogos/paises" />
     <add key="GetListaEstadosR" value="api/catalogos/estadosr" />
-    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" /> 
-    <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" /> 
+    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
+    <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
+    <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa"/>    
+    <add key="PutEliminarEmpresa" value="api/catalogos/elimina/empresa/" />    
     <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
+    <add key="PostRegistraUsuarios" value="api/catalogos/registra/usuarios" />
+    <add key="PutModificaCredencial" value="api/catalogos/modifica/usuariocredencial" />
+    <add key="PutUsuarioRolAgrega" value="api/catalogos/agrega/usuariorol" />
+    <add key="PutModificaUsuarios" value="api/catalogos/modifica/usuario"/>
+    <add key="PutEliminarUsuario" value="api/catalogos/elimina/usuario/" />
+    <add key="GetListaRoles" value="api/catalogos/roles/listaAllRoles" />
+    <add key="PostRegistraRol" value="api/catalogos/registra/roles" />
+    <add key="PutModificaRoles" value="api/catalogos/modifica/nombrerol" />
+    <add key="PutModificaPermisos" value="api/catalogos/modifica/permisos" />
+    <add key="PutEliminarRol" value="api/catalogos/elimina/rol/" />
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
