CJAL_18-09-2018_Avance catalogo roles

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -41,6 +41,9 @@
     <add key="PutModificaRoles" value="api/catalogos/modifica/nombrerol" />
     <add key="PutModificaPermisos" value="api/catalogos/modifica/permisos" />
     <add key="PutEliminarRol" value="api/catalogos/elimina/rol/" />
+    <add key="GetTiposPersona" value="api/catalogos/clientes/tipopersona" />
+    <add key="GetRegimenFiscal" value="api/catalogos/clientes/regimenfiscal" />
+    <add key="GetListaClientes" value="api/catalogos/clientes/listaclientes/" />
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
