--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -54,17 +54,22 @@
     <Compile Include="AdaptadoresDTO\Almacen\AlmacenAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Almacen\AlmacenProductoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\CentroCostoAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Catalogo\ClientesAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\CuentaContableAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\EmpresaAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\EstadoRepAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\PaisAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProductoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProveedorAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Catalogo\RegimenAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\RolAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Catalogo\TipoPerAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Compras\ComplementoGasAdapter.cs" />
     <Compile Include="DTOs\Almacen\AlmacenCrearEntradaDTO.cs" />
     <Compile Include="DTOs\Almacen\AlmacenEntradaDTO.cs" />
     <Compile Include="DTOs\Almacen\AlmacenDTO.cs" />
+    <Compile Include="DTOs\Catalogo\ClienteCrearDto.cs" />
+    <Compile Include="DTOs\Catalogo\ClientesDto.cs" />
     <Compile Include="DTOs\Catalogo\EmpresaModificaConfig.cs" />
     <Compile Include="DTOs\Catalogo\EstadosRepDTO.cs" />
     <Compile Include="DTOs\Catalogo\PaisDTO.cs" />
@@ -79,8 +84,10 @@
     <Compile Include="DTOs\Catalogo\ProductoCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\ProductoEliminarDto.cs" />
     <Compile Include="DTOs\Catalogo\ProductoModificarDto.cs" />
+    <Compile Include="DTOs\Catalogo\RegimenDTO.cs" />
     <Compile Include="DTOs\Catalogo\RolDto.cs" />
     <Compile Include="DTOs\Catalogo\TipoCentroCostoEnum.cs" />
+    <Compile Include="DTOs\Catalogo\TipoPersonaDTO.cs" />
     <Compile Include="DTOs\Catalogo\UnidadMedidaCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\UnidadMedidaDto.cs" />
     <Compile Include="DTOs\Catalogo\UnidadMedidaEliminarDto.cs" />
@@ -170,6 +177,7 @@
     <Compile Include="Servicios\AccesoADatos\AlmacenGasDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\CentroCostoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\AlmacenGasDescargaDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\ClientesDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\CuentaContableDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\EmpresaConfiguracionDA.cs" />
     <Compile Include="Servicios\AccesoADatos\EmpresaDataAccess.cs" />
@@ -178,15 +186,18 @@
     <Compile Include="Servicios\AccesoADatos\EstadoRDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\PaisDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\ProductoDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\RegimenDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\RequisicionDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\OrdenCompraDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\ProveedorDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\RolDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\TipoMedidorGasDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\TipoPerDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\UsuarioDataAccess.cs" />
     <Compile Include="Servicios\Almacen\ProductoAlmacenServicio.cs" />
     <Compile Include="Servicios\Almacen\AlmacenGasServicio.cs" />
     <Compile Include="Servicios\Catalogos\CentroCostoServicio.cs" />
+    <Compile Include="Servicios\Catalogos\ClienteServicio.cs" />
     <Compile Include="Servicios\Catalogos\CuentaContableServicio.cs" />
     <Compile Include="DTOs\Catalogo\CuentaContableDTO.cs" />
     <Compile Include="Servicios\Catalogos\EmpresaServicio.cs" />
@@ -196,7 +207,9 @@
     <Compile Include="Servicios\Catalogos\PaisServicio.cs" />
     <Compile Include="Servicios\Catalogos\ProductoServicios.cs" />
     <Compile Include="Servicios\Catalogos\ProveedorServicio.cs" />
+    <Compile Include="Servicios\Catalogos\RegimenServicio.cs" />
     <Compile Include="Servicios\Catalogos\TipoMedidorGasServicio.cs" />
+    <Compile Include="Servicios\Catalogos\TipoPersonaServicio.cs" />
     <Compile Include="Servicios\Catalogos\UsuarioServicio.cs" />
     <Compile Include="Servicios\Catalogos\ValidarCatalogoServicio.cs" />
     <Compile Include="Servicios\Compras\OrdenCompraServicio.cs" />
