--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -228,6 +228,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\EmpresasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -241,6 +242,9 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Catalogos\CatalogoRespuestaDTO.cs" />
+    <Compile Include="Models\Catalogos\ClienteLocacionMod.cs" />
+    <Compile Include="Models\Catalogos\ClientesDto.cs" />
+    <Compile Include="Models\Catalogos\ClientesModel.cs" />
     <Compile Include="Models\Catalogos\EmpDto.cs" />
     <Compile Include="Models\Catalogos\Empresa.cs" />
     <Compile Include="Models\Catalogos\EmpresaConfiguracion.cs" />
@@ -251,7 +255,9 @@
     <Compile Include="Models\Catalogos\PaisModel.cs" />
     <Compile Include="Models\Catalogos\ProductoDTO.cs" />
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
+    <Compile Include="Models\Catalogos\RegimenFiscalModel.cs" />
     <Compile Include="Models\Catalogos\RolDto.cs" />
+    <Compile Include="Models\Catalogos\TipoPersonaModel.cs" />
     <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\Catalogos\UsuariosModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -311,6 +317,7 @@
     <Content Include="assets\css\blog.css" />
     <Content Include="assets\css\chatapp.css" />
     <Content Include="assets\css\color_skins.css" />
+    <Content Include="assets\css\form.css" />
     <Content Include="assets\css\hm-style.css" />
     <Content Include="assets\css\inbox.css" />
     <Content Include="assets\css\main.css" />
@@ -4037,6 +4044,8 @@
     <Content Include="Views\Roles\ActualizaNombreRol.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolDto.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolDto_Compra.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Clientes\Nuevo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
