--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -19,9 +19,10 @@
     <add key="WebApiUrlBase" value="http://localhost:5469/" />
     <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
-    <!--Login-->
-    <!--Catalogos-->
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
+    <!--Login-->
+    
+    <!--Catalogos-->  
     <add key="PostRegistraEmpresas" value="api/catalogos/registra/empresa" />
     <add key="GetListaPaises" value="api/catalogos/paises" />
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
@@ -31,7 +32,6 @@
     <add key="GetListaUnidadAlmcenGas" value="api/catalogos/consulta/unidadalmacengas/" />
     <add key="GetListaEquiposTransporte" value="api/catalogos/consulta/equipotransporte" />
 
-
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
     <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo" />
@@ -40,6 +40,17 @@
     <add key="GetTipoCentroCostos" value="api/catalogos/consulta/tipocentrosdecosto" />
     
     <add key="GetListaProductos" value="api/catalogos/consulta/producto" />
+    <add key="GetProducto" value="api/catalogos/consulta/producto"/>
+    <add key="GetProductos" value="api/catalgos/consulta/producto/" />
+    <add key="PostRegistraProducto" value="api/catalogos/registra/producto" />
+    <add key="PutModificaProducto" value="api/catalogos/modifica/Producto" />
+    <add key="PutEliminaProducto" value="api/catalogos/elimina/Producto" />
+
+    <add key="GetUnidadMedida" value="api/catalogos/consulta/unidad/medida"/>
+    <add key="GetUnidadMedidas" value="api/catalgos/consulta/unidad/medida/" />
+    <add key="PostRegistraUnidadMedida" value="api/catalogos/registra/unidad/medida" />
+    <add key="PutModificaUnidadMedida" value="api/catalogos/modifica/unidad/medida" />
+    <add key="PutEliminaUnidadMedida" value="api/catalogos/elimina/unidad/medida" />
 
     <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable" />
     <add key="PutModificaCuentaContable" value="api/catalogos/modifica/cuenta/contable" />
@@ -52,7 +63,20 @@
     <add key="PostRegistraProveedor" value="api/catalogos/registra/proveedor" />
     <add key="PutModificaProveedor" value="api/catalogos/consulta/proveedores" />
     <add key="PutEliminaProveedor" value="api/catalogos/consulta/proveedores" />
+
+    <add key="GetCategoriaProducto" value="api/catalogos/consulta/categoria/producto"/>
+    <add key="GetCategoriasProducto" value="api/catalgos/consulta/categoria/producto/" />
+    <add key="PostRegistraCategoriaProducto" value="api/catalogos/registra/categoria/producto" />
+    <add key="PutModificaCategoriaProducto" value="api/catalogos/modifica/categoria/producto" />
+    <add key="PutEliminaCategoriaProducto" value="api/catalogos/elimina/categoria/producto" />
+
+    <add key="GetLineaProducto" value="api/catalogos/consulta/linea/producto"/>
+    <add key="GetLineasProducto" value="api/catalgos/consulta/linea/producto/" />
+    <add key="PostRegistraLineaProducto" value="api/catalogos/registra/linea/producto" />
+    <add key="PutModificaLineaProducto" value="api/catalogos/modifica/linea/producto" />
+    <add key="PutEliminaLineaProducto" value="api/catalogos/elimina/linea/producto" />    
     <!--Catalogos-->
+    
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion" />
@@ -63,6 +87,7 @@
     <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion" />
     <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion" />
     <!--Requisicion-->
+    
     <!--Compras-->
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
     <add key="GetBuscarReq" value="api/compras/buscar/requisicion/" />
