--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrdenCompraController.cs" />
+    <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\RequisicionController.cs" />
     <Compile Include="Controllers\Shared\MainController.cs" />
     <Compile Include="Global.asax.cs">
@@ -239,6 +240,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Catalogos\CatalogoRespuestaDTO.cs" />
+    <Compile Include="Models\Catalogos\CategoriaProductoDTO.cs" />
     <Compile Include="Models\Catalogos\CentroCosto\CentroCostoCrearDTO.cs" />
     <Compile Include="Models\Catalogos\CentroCosto\CentroCostoEliminarDTO.cs" />
     <Compile Include="Models\Catalogos\CentroCosto\CentroCostoModel.cs" />
@@ -255,6 +257,7 @@
     <Compile Include="Models\Catalogos\EmpresasDTO.cs" />
     <Compile Include="Models\Catalogos\EquipoTransporteDTO.cs" />
     <Compile Include="Models\Catalogos\EstacionCarburacionDTO.cs" />
+    <Compile Include="Models\Catalogos\LineaProductoDTO.cs" />
     <Compile Include="Models\Catalogos\PaisModel.cs" />
     <Compile Include="Models\Catalogos\ProductoDTO.cs" />
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
@@ -298,6 +301,7 @@
     <Compile Include="Models\Seguridad\LoginModel.cs" />
     <Compile Include="Models\Seguridad\RespuestaAutenticacionDto.cs" />
     <Compile Include="Models\Seguridad\RespuestaDTO.cs" />
+    <Compile Include="Models\Catalogos\UnidadMedidaDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -4043,6 +4047,10 @@
     <Content Include="Views\CuentaContable\CuentaContable.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\CuentaContableDTO.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\CentroCostoDTO.cshtml" />
+    <Content Include="Views\Producto\Categoria.cshtml" />
+    <Content Include="Views\Producto\LineaProducto.cshtml" />
+    <Content Include="Views\Producto\UnidadMedida.cshtml" />
+    <Content Include="Views\Producto\Producto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
