--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -4051,6 +4051,9 @@
     <Content Include="Views\Producto\LineaProducto.cshtml" />
     <Content Include="Views\Producto\UnidadMedida.cshtml" />
     <Content Include="Views\Producto\Producto.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\CategoriaProductoDTO.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\LineaProductoDTO.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\UnidadMedidaDTO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
