JOTM -19/09/2018 Termini vistas de recarga
* Agrega vista de registro de recarga pipa
* Agrega vista de registro de recarga estación
* Agrega métodos de rest
* Falta agregar lisener

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -128,8 +128,11 @@
         <activity
             android:name=".Activity.RecargaCamionetaActivity"
             android:label="@string/Recarga_camioneta" />
-        <activity android:name=".Activity.RecargaEstacionCarburacionActivity"
-            android:label="@string/Recarga_de_estacion"/>
+        <activity
+            android:name=".Activity.RecargaEstacionCarburacionActivity"
+            android:label="@string/Recarga_de_estacion" />
+        <activity android:name=".Activity.RecargaPipaActivity"
+            android:label="@string/Recarga_pipa"/>
     </application>
 
 </manifest>
