--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -252,10 +252,15 @@
     <Compile Include="Models\Catalogos\EmpresaDTO.cs" />
     <Compile Include="Models\Catalogos\EstadosRepModel.cs" />
     <Compile Include="Models\Catalogos\PaisModel.cs" />
+    <Compile Include="Models\Catalogos\PartialViewModel.cs" />
     <Compile Include="Models\Catalogos\ProductoDTO.cs" />
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
     <Compile Include="Models\Catalogos\RegimenFiscalModel.cs" />
+    <Compile Include="Models\Catalogos\RolCat.cs" />
+    <Compile Include="Models\Catalogos\RolCompras.cs" />
     <Compile Include="Models\Catalogos\RolDto.cs" />
+    <Compile Include="Models\Catalogos\RolMovilCompra.cs" />
+    <Compile Include="Models\Catalogos\RolRequsicion.cs" />
     <Compile Include="Models\Catalogos\TipoPersonaModel.cs" />
     <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\Catalogos\UsuariosModel.cs" />
@@ -4054,9 +4059,12 @@
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\ActualizaNombreRol.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolDto.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\RolDto_Compra.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RolCompras.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
     <Content Include="Views\Clientes\Nuevo.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RolCat.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RolRequsicion.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RolMovilCompra.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
