--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -21,6 +21,19 @@
     <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
     <!--Login-->
+    <!--Seguridad-->
+    <add key="GetListaUsuarios" value="api/seguridad/usuarios/listausuarios/" />
+    <add key="PostRegistraUsuarios" value="api/seguridad/registra/usuarios" />
+    <add key="PutModificaCredencial" value="api/seguridad/modifica/usuariocredencial" />
+    <add key="PutModificaUsuarios" value="api/seguridad/modifica/usuario"/>
+    <add key="PutEliminarUsuario" value="api/seguridad/elimina/usuario/" />
+    <add key="GetListaRoles" value="api/seguridad/roles/listaAllRoles" />
+    <add key="PostRegistraRol" value="api/seguridad/registra/roles" />
+    <add key="PutModificaRoles" value="api/seguridad/modifica/nombrerol" />
+    <add key="PutModificaPermisos" value="api/seguridad/modifica/permisos" />
+    <add key="PutEliminarRol" value="api/seguridad/elimina/rol/" />
+    <add key="PostAsignarRol" value="api/seguridad/asignar/rol" />
+    <!--Seguridad-->
     <!--Catalogos-->
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
     <add key="PostRegistraEmpresas" value="api/catalogos/registra/empresa" />
@@ -29,21 +42,11 @@
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
     <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
     <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa"/>    
-    <add key="PutEliminarEmpresa" value="api/catalogos/elimina/empresa/" />    
-    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
-    <add key="PostRegistraUsuarios" value="api/catalogos/registra/usuarios" />
-    <add key="PutModificaCredencial" value="api/catalogos/modifica/usuariocredencial" />
-    <add key="PutUsuarioRolAgrega" value="api/catalogos/agrega/usuariorol" />
-    <add key="PutModificaUsuarios" value="api/catalogos/modifica/usuario"/>
-    <add key="PutEliminarUsuario" value="api/catalogos/elimina/usuario/" />
-    <add key="GetListaRoles" value="api/catalogos/roles/listaAllRoles" />
-    <add key="PostRegistraRol" value="api/catalogos/registra/roles" />
-    <add key="PutModificaRoles" value="api/catalogos/modifica/nombrerol" />
-    <add key="PutModificaPermisos" value="api/catalogos/modifica/permisos" />
-    <add key="PutEliminarRol" value="api/catalogos/elimina/rol/" />
+    <add key="PutEliminarEmpresa" value="api/catalogos/elimina/empresa/" /> 
     <add key="GetTiposPersona" value="api/catalogos/clientes/tipopersona" />
     <add key="GetRegimenFiscal" value="api/catalogos/clientes/regimenfiscal" />
     <add key="GetListaClientes" value="api/catalogos/clientes/listaclientes/" />
+    <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
