JOTM 20/09/2018 Pantalla Autoconsumo estación
* Pantalla de autoconsumo estación
* Método para llamar rest de listas y de envió de datos

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -131,8 +131,12 @@
         <activity
             android:name=".Activity.RecargaEstacionCarburacionActivity"
             android:label="@string/Recarga_de_estacion" />
-        <activity android:name=".Activity.RecargaPipaActivity"
-            android:label="@string/Recarga_pipa"/>
+        <activity
+            android:name=".Activity.RecargaPipaActivity"
+            android:label="@string/Recarga_pipa" />
+        <activity android:name=".Activity.AutoconsumoEstacionActivity"
+            android:label="@string/Autoconsumo_estacion"
+            />
     </application>
 
 </manifest>
