CJAL_20/09/2018_CRUD_CatalogoClientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -50,7 +50,10 @@
     <add key="GetTiposPersona" value="api/catalogos/clientes/tipopersona" />
     <add key="GetRegimenFiscal" value="api/catalogos/clientes/regimenfiscal" />
     <add key="GetListaClientes" value="api/catalogos/clientes/listaclientes/" />
+    <add key="GetClientes" value="api/catalogos/clientes/listaclientes" />
     <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
+    <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />
+    <add key="PutEliminaClientes" value="api/catalogos/elimina/cliente/" />
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
