JOTM 20/09/2018 Crea vista de Autoconsumo Inventario Genatal
* Crea vista de inventario general

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -134,9 +134,11 @@
         <activity
             android:name=".Activity.RecargaPipaActivity"
             android:label="@string/Recarga_pipa" />
-        <activity android:name=".Activity.AutoconsumoEstacionActivity"
-            android:label="@string/Autoconsumo_estacion"
-            />
+        <activity
+            android:name=".Activity.AutoconsumoEstacionActivity"
+            android:label="@string/Autoconsumo_estacion" />
+        <activity android:name=".Activity.AutoconsumoInventarioActivity"
+            android:label="@string/Autoconsumo_inventario"/>
     </application>
 
 </manifest>
