--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
@@ -53,6 +53,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Core" version="3.5.21022.801" targetFramework="net452" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net452" />
