CJAL-21/09/2018_AVANCE_CREACION-CRUD-CLIENTESLOCACIONES

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -4094,6 +4094,7 @@
     <Content Include="Views\Shared\EditorTemplates\RolCat.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolRequsicion.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolMovilCompra.cshtml" />
+    <Content Include="Views\Clientes\EditarLocaciones.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
